--- a/src/resources/css/themes/Black_nm/General.css
+++ b/src/resources/css/themes/Black_nm/General.css
@@ -218,45 +218,34 @@ QLineEdit#chatText-topLevel
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
 
-QSlider::groove:vertical
+QSlider::groove
 {
+    background-color: rgba(255, 255, 255, 15);
     border: none;
-}
-
-QSlider::groove:horizontal
-{
-    background-color: rgba(0, 0, 0, 50);
-    height: 2px;
-    border: none;
-}
-QSlider::groove:vertical
-{
-    background-color: rgba(0, 0, 0, 50);
-    width: 2px;
 }
 
 QSlider::handle:horizontal
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(120, 120, 120), stop:1 rgb(60, 60, 60));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95,
+        stop:0 rgba(120, 120, 120, 180),
+        stop:1 rgba(60, 60, 60, 180));
+
     border: 1px outset rgb(10, 10, 10);
     border-radius: 2px;
-    margin-top: -7px;
-    margin-bottom: -7px;
     padding: 0px;
     width: 8px;
-    height: 15px;
 }
 
 QSlider::handle:vertical
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95,
+        stop:0 rgba(180, 180, 180, 180),
+        stop:1 rgba(120, 120, 120, 180));
+
     border: 1px outset rgb(30, 30, 30);
     border-radius: 2px;
-    margin-left: -9px;
-    margin-right: -9px;
     padding: 0px;
     height: 9px;
-    width: 24px;
 }
 
 QSlider::handle:horizontal:hover
@@ -355,7 +344,7 @@ QTabWidget::pane
 
 
 
-AudioMeter
+AudioSlider
 {
     /* changing Audio Peak meter custom CSS properties */
     qproperty-rmsColor: rgb(110, 110, 110);
