--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -167,15 +167,13 @@ QSlider::groove:vertical
 QSlider::groove:horizontal
 {
     background-color: rgba(0, 0, 0, 50);
-    height: 2px;
     border: none;
 }
+
 QSlider::groove:vertical
 {
     background-color: rgba(0, 0, 0, 50);
-    width: 2px;
 }
-
 
 QSlider::handle
 {
@@ -192,23 +190,20 @@ QSlider::handle:hover
 
 QSlider::handle:horizontal
 {
-    margin-top: -6px;
-    margin-bottom: -7px;
     padding: 0px;
     width: 8px;
-    height: 15px;
 }
 
 QSlider::handle:vertical
 {
-    margin-left: -9px;
-    margin-right: -9px;
     padding: 0px;
     height: 9px;
-    width: 24px;
 }
 
-
+AudioSlider
+{
+    qproperty-dBMarksColor: rgb(70, 70, 70);
+}
 
 
 /* TabBar ----------------------*/
@@ -254,7 +249,7 @@ QMenu
 }
 
 
-AudioMeter
+AudioSlider
 {
     /* changing Audio Peak meter custom CSS properties */
     qproperty-rmsColor: rgb(150, 150, 150);
@@ -263,7 +258,7 @@ AudioMeter
     qproperty-maxPeakColor: rgb(150, 150, 150);
 }
 
-AudioMeter#masterMeter
+AudioSlider#masterFader
 {
     qproperty-maxPeakColor: rgb(120, 120, 120);
     qproperty-rmsColor: rgb(120, 120, 120);
