--- a/src/resources/css/themes/Navy_nm/General.css
+++ b/src/resources/css/themes/Navy_nm/General.css
@@ -141,7 +141,8 @@ BoostSpinBox QToolButton:!enabled:!checked
 QSlider::handle
 {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                stop: 0.0 rgb(115, 115, 115), stop: 1.0 rgb(89, 89, 89));
+                stop: 0.0 rgb(115, 115, 115),
+                stop: 1.0 rgb(89, 89, 89));
 }
 
 QSlider::handle:hover
@@ -153,34 +154,19 @@ QSlider::handle:hover
 QSlider::groove,
 MetronomePanel QSlider::groove:horizontal
 {
-    background-color: rgb(38, 38, 38);
+    background-color: rgb(52, 52, 52);
     border: 1px solid rgb(30, 30, 30);
     border-radius: 3px;
 }
 
-QSlider::groove:vertical
-{
-    width: 6px;
-}
-
-QSlider::groove:horizontal
-{
-    height: 5px;
-}
-
 QSlider::handle:vertical
 {
-    margin-left: -8px;
-    margin-right: -8px;
     padding: 0px;
     height: 8px;
-    width: 17px;
 }
 
 QSlider::handle:horizontal
 {
-    margin-top: -4px;
-    margin-bottom: -4px;
     width: 9px;
 }
 
@@ -388,7 +374,7 @@ LocalTrackView #inputSelectionButton
     color: rgba(255, 255, 255, 100);
 }
 
-AudioMeter
+AudioSlider
 {
     /* changing Audio Peak meter custom CSS properties */
     qproperty-rmsColor: rgb(110, 110, 110);
