--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -222,6 +222,11 @@ NinjamTrackView QProgressBar                /* The progress bar in bottom of nin
     max-height: 3px;
 }
 
+NinjamTrackView #instrumentButton
+{
+    padding-right: 8px;
+}
+
 /* Ninjam track groups
 ------------------------*/
 
