--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -1338,6 +1338,23 @@
         <file>emoji/emoji.json</file>
         <file>emoji/smile.png</file>
         <file>emoji/sad.png</file>
+        <file>instruments/ac-guitar.png</file>
+        <file>instruments/banjo.png</file>
+        <file>instruments/bass.png</file>
+        <file>instruments/double-bass.png</file>
+        <file>instruments/drum.png</file>
+        <file>instruments/drumsticks.png</file>
+        <file>instruments/gramophone.png</file>
+        <file>instruments/guitar.png</file>
+        <file>instruments/jtba.png</file>
+        <file>instruments/keys.png</file>
+        <file>instruments/mandolin.png</file>
+        <file>instruments/mic.png</file>
+        <file>instruments/piano.png</file>
+        <file>instruments/triangle.png</file>
+        <file>instruments/troll.png</file>
+        <file>instruments/trumpet.png</file>
+        <file>instruments/violin.png</file>
     </qresource>
     <qresource prefix="/tiles">
         <file>map/0/0/0.png</file>
