--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -210,3 +210,13 @@ LooperWindow QGroupBox
 {
     selection-color: black;
 }
+
+#instrumentsMenu QToolButton
+{
+    border: none;
+}
+
+QWidget#instrumentsMenu QToolButton:hover
+{
+    border: 1px solid gray;
+}
