--- a/src/resources/css/themes/Navy_nm/General.css
+++ b/src/resources/css/themes/Navy_nm/General.css
@@ -69,7 +69,8 @@ QToolButton,
 QScrollBar::handle,
 QToolTip,
 QMenu,
-QDialog
+QDialog,
+QWidget#instrumentsMenu
 {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                     stop: 0.0 rgb(75, 75, 75), stop: 1.0 rgb(59, 59, 59));
