--- a/src/resources/css/themes/Rounded/Dialogs.css
+++ b/src/resources/css/themes/Rounded/Dialogs.css
@@ -4,7 +4,8 @@ QMessageBox,
 QInputDialog,
 PluginScanDialog,
 MidiToolsDialog,
-PrivateServerWindow
+PrivateServerWindow,
+#instrumentsMenu
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0 rgb(250, 250, 250),
