--- a/src/resources/css/themes/Ice/BaseTrack.css
+++ b/src/resources/css/themes/Ice/BaseTrack.css
@@ -6,7 +6,8 @@
 
 #soloButton,
 #muteButton,
-BoostSpinBox
+BoostSpinBox,
+#instrumentsMenu QToolButton:!hover
 {
     font-size: 9px;
     padding: 2px;
