--- a/src/resources/css/themes/Ice/NinjamWindow.css
+++ b/src/resources/css/themes/Ice/NinjamWindow.css
@@ -72,7 +72,9 @@ NinjamTrackView QPushButton#receiveButton:hover:!checked
 #buttonGridLayout:hover,
 #wide:hover,
 #narrow:hover,
-#licenceButton:hover
+#licenceButton:hover,
+InstrumentsButton:hover,
+#instrumentsMenu QToolButton:hover
 {
     border: 1px solid rgba(0, 0, 0, 80);
     background-color: rgba(255, 255, 255, 120);
