:gem: Instrument icons (#1054)
* Using QToolButton to show instrument icon

* Adding instrument icons in resources

* Storing and remembering instrument index

* Guessing instrument icon based in channel name

--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -222,6 +222,13 @@ NinjamTrackView QProgressBar                /* The progress bar in bottom of nin
     max-height: 3px;
 }
 
+/* instruments menu */
+InstrumentsButton:enabled:!hover
+{
+    border: none;
+    background: none;
+}
+
 /* Ninjam track groups
 ------------------------*/
 
