--- a/src/resources/css/themes/Flat/BaseTrack.css
+++ b/src/resources/css/themes/Flat/BaseTrack.css
@@ -111,7 +111,7 @@ BaseTrackView[unlighted="true"] QSlider::handle:vertical,    /* track fader hand
 #panSlider::handle:disabled,
 QSlider::handle:vertical:disabled
 {
-    background: rgb(180, 180, 180);
+    background: rgba(180, 180, 180, 150);
 }
 
 BaseTrackView[unlighted="true"],                            /* the track */
