--- a/src/resources/css/themes/Ice/BaseTrack.css
+++ b/src/resources/css/themes/Ice/BaseTrack.css
@@ -135,8 +135,8 @@ BaseTrackView[unlighted="true"] QSlider::handle:vertical,    /* track fader hand
 #panSlider::handle:disabled,
 QSlider::handle:vertical:disabled
 {
-    background: rgba(0, 107, 206);
-    border: 1px outset rgb(0, 80, 151);
+    background: rgba(0, 107, 206, 155);
+    border: 1px outset rgba(0, 80, 151, 180);
 }
 
 BaseTrackView[unlighted="true"],                            /* the track */
