--- a/src/resources/css/themes/Navy_nm/General.css
+++ b/src/resources/css/themes/Navy_nm/General.css
@@ -142,14 +142,14 @@ BoostSpinBox QToolButton:!enabled:!checked
 QSlider::handle
 {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                stop: 0.0 rgb(115, 115, 115),
-                stop: 1.0 rgb(89, 89, 89));
+                stop: 0.0 rgba(115, 115, 115, 150),
+                stop: 1.0 rgba(89, 89, 89, 150));
 }
 
 QSlider::handle:hover
 {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                stop: 0.0 rgb(155, 155, 155), stop: 1.0 rgb(119, 119, 119));
+                stop: 0.0 rgb(115, 115, 115), stop: 1.0 rgb(89, 89, 89));
 }
 
 QSlider::groove,
