--- a/src/resources/css/themes/Rounded/General.css
+++ b/src/resources/css/themes/Rounded/General.css
@@ -224,16 +224,16 @@ QSlider::groove:vertical
 QSlider::groove:vertical
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-            stop: 0     rgb(201, 201, 201),
-            stop: 1.0   rgb(115, 115, 115)
+            stop: 0     rgba(201, 201, 201, 125),
+            stop: 1.0   rgba(115, 115, 115, 125)
             );
 }
 
 QSlider::handle:horizontal
 {
     background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
-        stop: 0      rgb(230, 230, 230),
-        stop: 0.8    rgb(120, 120, 120),
+        stop: 0      rgba(230, 230, 230, 180),
+        stop: 0.8    rgba(120, 120, 120, 180),
         stop: 1      rgba(0, 0, 0, 20));
 
 
@@ -254,8 +254,8 @@ QSlider::handle:horizontal:hover
 QSlider::handle:vertical
 {
     background: qlineargradient(x1:0, y1:0.3, x2:0.7, y2:1,
-        stop: 0      rgb(230, 230, 230),
-        stop: 0.9    rgb(170, 170, 170),
+        stop: 0      rgba(230, 230, 230, 180),
+        stop: 0.9    rgba(170, 170, 170, 180),
         stop: 1      rgba(0, 0, 0, 20));
 
     margin-left: -5px;
