Improving percussion icon, adding computer and pads icon

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -1343,17 +1343,18 @@
         <file>instruments/bass.png</file>
         <file>instruments/double-bass.png</file>
         <file>instruments/drum.png</file>
-        <file>instruments/gramophone.png</file>
         <file>instruments/guitar.png</file>
         <file>instruments/jtba.png</file>
         <file>instruments/keys.png</file>
         <file>instruments/mandolin.png</file>
         <file>instruments/mic.png</file>
         <file>instruments/piano.png</file>
-        <file>instruments/triangle.png</file>
         <file>instruments/troll.png</file>
         <file>instruments/trumpet.png</file>
         <file>instruments/violin.png</file>
+        <file>instruments/computer.png</file>
+        <file>instruments/pads.png</file>
+        <file>instruments/percussion.png</file>
     </qresource>
     <qresource prefix="/tiles">
         <file>map/0/0/0.png</file>
