Creating 2nd channel for video

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -1340,6 +1340,7 @@
         <file>emoji/sad.png</file>
         <file>instruments/ac-guitar.png</file>
         <file>instruments/banjo.png</file>
+        <file>instruments/cam.png</file>
         <file>instruments/bass.png</file>
         <file>instruments/double-bass.png</file>
         <file>instruments/drum.png</file>
