--- a/src/resources/css/common/Chords.css
+++ b/src/resources/css/common/Chords.css
@@ -3,31 +3,6 @@
 */
 
 
-
-/* ChordsPanel is the widget used to show the chord progressions and the action buttons.
------------------------------------------------------------------------------------------*/
-
-ChordsPanel #buttonSendToChat, /* button used to send chord progression to chat */
-ChordsPanel #buttonDiscardChords /* button used to drop the current chord progression */
-{
-    background-repeat: no-repeat;
-    background-position: center;
-    max-width: 18px;
-    width: 18px;
-    padding: 2px;
-}
-
-ChordsPanel #buttonSendToChat
-{
-    background-image: url(':/images/chat_small.png');
-}
-
-ChordsPanel #buttonDiscardChords
-{
-    background-image: url(':/images/discard.png');
-}
-
-
 /* ChordLabel is the widget used to show one chord. A chord progression is a sequence of chord labels
 --------------------------------------------------------------------------------------------------*/
 ChordLabel
@@ -43,4 +18,12 @@ ChordLabel[current="true"]
 {
     color: black;
     border: 1px solid rgba(0, 0, 0, 130);
+}
+
+/* chord panel buttons in top right corner */
+ChordsPanel QPushButton
+{
+    min-width: 16px;
+    min-height: 16px;
+    padding: 2px;
 }
