--- a/src/resources/css/themes/Volcano_nm/Chords.css
+++ b/src/resources/css/themes/Volcano_nm/Chords.css
@@ -4,12 +4,13 @@
 ChordLabel
 {
     background-color: rgba(0,0,0, 7);
-    color: rgb(90, 90, 90);
+    color: rgb(0, 0, 0);
     selection-background-color: rgb(179, 89, 37);
     selection-color: rgb(254, 181, 102);
 }
 
 ChordLabel[current="true"]
 {
-    /*(background-color: rgba(255,255,255, 220);*/
+    background-color: rgba(253,224,155);
 }
+
